# renoma-chat

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  lib.rs  openai.rs
backend/src/dbs/: local.rs  mod.rs  postgres.rs
backend/src/handlers/: characters.rs  chats.rs  messages.rs  mod.rs  plugins.rs
backend/src/plugins/: mod.rs  protocol.rs
examples/tools/dice_roll/: Cargo.toml
examples/tools/dice_roll/src/: main.rs
frontend/: Cargo.toml  index.css  index.html
frontend/src/: api.rs  main.rs  store.rs
frontend/src/components/: char_modal.rs  chat_stage.rs  markdown.rs  mod.rs  settings_modal.rs  sidebar.rs
frontend/styles/: base.css  chat.css  components.css  layout.css  modals.css  sidebar.css
renoma-launcher/: Cargo.toml
renoma-launcher/src/: cli.rs  main.rs
shared/: Cargo.toml
shared/src/: models.rs
shared/src/models/: character.rs  chat.rs  message.rs  mod.rs  plugin.rs  settings.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
