[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "*", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "uuid",
    "json",
] }
async-openai = { version = "*", features = ["chat-completion"] }
uuid = { version = "*", features = ["v4", "v7", "serde"] }
tower-http = { version = "*", features = ["cors"] }
axum = { version = "*", features = ["multipart"] }
tokio = { version = "*", features = ["process"] }
serde = { version = "*", features = ["derive"] }
shared = { path = "../shared" }
is_executable = "*"
async-stream = "*"
async-trait = "*"
serde_json = "*"
thiserror = "*"
tracing = "*"
futures = "*"
