[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
web-sys = { version = "*", features = ["Navigator", "Clipboard"] }
uuid = { version = "*", features = ["v7", "serde", "js"] }
yew = { version = "*", features = ["csr"] }
shared = { path = "../shared" }
wasm-bindgen-futures = "*"
pulldown-cmark = "*"
gloo-storage = "*"
wasm-streams = "*"
serde_json = "*"
gloo-net = "*"
futures = "*"
tracing = "*"
